--- a/index.html
+++ b/index.html
@@ -2973,7 +2973,8 @@ async function startCountdown() {
         }
       }
       // Route to appropriate screen based on content type
-      if (S._contentType === 'spelling' || (S.myRole === 'host' && S._spellingList)) {
+      console.log('Routing:', { contentType: S._contentType, spellingList: !!S._spellingList, currentSpellingList: !!currentSpellingList, myRole: S.myRole, story: !!S.story });
+      if (S._contentType === 'spelling') {
         // Spelling mode — show the spelling screen
         const list = S._spellingList || currentSpellingList;
         if (list) {
@@ -2981,6 +2982,7 @@ async function startCountdown() {
           renderSpellingWords(list);
           show('screen-spelling');
         } else {
+          console.warn('Spelling content type but no list found!');
           setupReadScreen(); show('screen-read');
         }
       } else {
